--- a/client/public/style.css
+++ b/client/public/style.css
@@ -6,4 +6,13 @@ video {
   z-index: -100;
 }
 
+#header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: white; 
+  margin-left: auto;
+  margin-right: auto;
+  width: 100px;
+}
 
