--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,18 +1,19 @@
 video {
+  position: relative;
   min-width: 100%;
   min-height: 100%;
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 100%;
   z-index: -100;
+  float: left;
 }
 
 #header {
   position: absolute;
-  top: 0;
-  left: 0;
+  text-align: center;
   color: white; 
-  margin-left: auto;
-  margin-right: auto;
-  width: 100px;
+  width: 100%;
+  height: 100%;
+  line-height: 100%;
 }
 
