--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,19 +1,31 @@
 video {
-  position: relative;
+  position: fixed;
+  top: 50%;
+  left: 50%;
   min-width: 100%;
   min-height: 100%;
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
   z-index: -100;
-  float: left;
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  background-size: cover;
+}
+
+.jumbotron {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(138,138,138,.3);
 }
 
 #header {
-  position: absolute;
   text-align: center;
   color: white; 
-  width: 100%;
-  height: 100%;
-  line-height: 100%;
+  margin: auto;
 }
+
 
