--- a/client/public/style.css
+++ b/client/public/style.css
@@ -34,12 +34,13 @@ video {
   -moz-transform: translateX(-50%) translateY(-50%);
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: rgba(138,138,138,.3);
+  background: rgba(148,148,148,.5);
 }
 
 #header {
+  font-family: seravek;
   text-align: center;
-  color: white; 
+  color: white;
   margin: auto;
 }
 
@@ -59,5 +60,30 @@ video {
 
 .icons a:hover, #skills h1 a {
   color: black;
+}
+
+.page-icons a {
+  text-decoration: none;
+  color: white;
+  font-weight: lighter;
+}
+
+.page-icons a:hover, #skills h1 a {
+  color: black;
+}
+
+.btn-group-lg>.btn {
+  padding-left: 35px;
+  padding-right: 35px;
+  background: rgba(148,148,148,.5);
+}
+
+.btn-group-lg>.btn:hover {
+  background: white;
+}
+
+.btn {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
