--- a/client/public/style.css
+++ b/client/public/style.css
@@ -87,3 +87,17 @@ video {
   padding-right: 20px;
 }
 
+.skillsbg {
+  background-color: dodgerblue;
+  min-height: 100%;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+}
+
+.skillsheader {
+  text-align: center;
+  margin: 0 auto;
+  width: 20%;
+}
+
