--- a/client/public/style.css
+++ b/client/public/style.css
@@ -75,7 +75,7 @@ video {
 .btn-group-lg>.btn {
   padding-left: 45px;
   padding-right: 45px;
-  background: rgba(148,148,148,.5);
+  background: rgba(148,148,148,.3);
 }
 
 .btn-group-lg>.btn:hover {
@@ -101,3 +101,20 @@ video {
   width: 20%;
 }
 
+.skillList {
+  text-align: center;
+  min-width: 100%;
+  min-height: 100%;
+  height: 100%;
+  width: 100%;
+}
+
+ul {
+ list-style: none;
+}
+
+.homebutton {
+  margin-top: 20px;
+  position: absolute;
+  font-weight: lighter;
+}
