--- a/client/public/style.css
+++ b/client/public/style.css
@@ -88,9 +88,9 @@ video {
 }
 
 .skillsbg {
-  background-color:rgb(107,218,237);  
+  background-color:rgb(107,218,237);
+  padding-bottom: 20px;  
   min-height: 100%;
-  width: 100%;
   height: 100%;
   background-size: cover;
 }
@@ -105,10 +105,12 @@ video {
 .skillList {
   color: black;
   text-align: center;
-  min-width: 100%;
   min-height: 100%;
   height: 100%;
-  width: 100%;
+}
+
+.skillList li {
+  padding: 8px;
 }
 
 ul {
