--- a/client/public/style.css
+++ b/client/public/style.css
@@ -89,7 +89,8 @@ video {
 
 .skillsbg {
   background-color:rgb(107,218,237);
-  padding-bottom: 20px;  
+  padding-bottom: 50px;  
+  overflow: hidden;
   min-height: 100%;
   height: 100%;
   background-size: cover;
@@ -102,11 +103,19 @@ video {
   width: 20%;
 }
 
+.skillsheader h1 {
+  font-size: 45px;
+}
+
 .skillList {
   color: black;
   text-align: center;
   min-height: 100%;
   height: 100%;
+}
+
+.headers {
+  font-size: 30px;
 }
 
 .skillList li {
