--- a/client/public/style.css
+++ b/client/public/style.css
@@ -134,7 +134,7 @@ ul {
 
 .portfoliobg {
   background-color: springgreen;
-  padding-bottom: 50px;  
+  padding-bottom: 230px;  
   overflow: hidden;
   min-height: 100%;
   height: 100%;
@@ -149,20 +149,30 @@ ul {
 }
 
 .portfolioFrame {
-  margin-top: 20px;
+  padding-top: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-top: 40px;
   min-height: 100%;
 }
 
 .portfoliobutton {
-  margin-left: 30px;
-  margin-right: 30px;
-  width: 150px;
+  margin-top: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+  width: 160px;
 }
 
 .card-title {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.card-text {
   text-align: center;
 }
 
 .card-img-top {
   max-width: 100%;
+  height: 30vh;
 }
