--- a/client/public/style.css
+++ b/client/public/style.css
@@ -98,8 +98,11 @@ video {
 .skillsheader {
   color: black;
   text-align: center;
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 20px;
   width: 20%;
+  
 }
 
 .skillsheader h1 {
