edit jumbotron padding

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -35,7 +35,7 @@ video {
   -webkit-transform: translateX(-50%) translateY(-55%);
   transform: translateX(-50%) translateY(-55%);
   background: rgba(148,148,148, .3);
-  padding: 30px;
+  padding: 30px 10px;
 }
 
 #header {
@@ -87,7 +87,7 @@ video {
 }
 
 #btnrow {
-  padding-bottom: 10px; 
+  padding-bottom: 20px; 
 }
 
 .skillsbg {
@@ -164,9 +164,9 @@ ul {
 
 .portfoliobutton {
   margin-top: 10px;
-  margin-left: 20px;
-  margin-right: 20px;
-  width: 160px;
+  margin-left: 5%;
+  margin-right: 5%;
+  width: 40%;
 }
 
 .card-title {
@@ -179,6 +179,7 @@ ul {
 }
 
 .card-img-top {
+  min-width: 100%;
   max-width: 100%;
   height: 30vh;
   margin-bottom: 15px;
