--- a/client/public/style.css
+++ b/client/public/style.css
@@ -150,6 +150,18 @@ ul {
   width: 20%;
 }
 
+@media only screen and (max-width: 640px) {
+  .portfolioheader h1 {
+    margin-left: -40px;
+  } 
+}
+
+ @media only screen and (max-width: 480px) {
+  .portfolioheader h1 {
+    margin-left: -40px;
+  }
+ }
+
 .portfolioFrame {
   padding-top: 10px;
   padding-left: 30px;
