--- a/client/public/style.css
+++ b/client/public/style.css
@@ -106,8 +106,19 @@ video {
   margin-left: auto;
   margin-bottom: 20px;
   width: 20%;
-  
 }
+
+@media only screen and (max-width: 640px) {
+  .skillsheader h1 {
+    margin-left: -20px;
+  } 
+}
+
+ @media only screen and (max-width: 480px) {
+  .skillsheader h1 {
+    margin-left: -20px;
+  }
+ }
 
 .skillList {
   color: black;
