change skill page and portfolio page wallpapers

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -91,7 +91,7 @@ video {
 }
 
 .skillsbg {
-  background-color: rgb(140,218,255);
+  background-image: url('./wallpaper3.jpg');
   padding-bottom: 50px;  
   overflow: hidden;
   min-height: 100%;
@@ -100,7 +100,7 @@ video {
 }
 
 .skillsheader {
-  color: black;
+  color: white;
   text-align: center;
   margin-right: auto;
   margin-left: auto;
@@ -121,7 +121,7 @@ video {
  }
 
 .skillList {
-  color: black;
+  color: white;
   text-align: center;
   min-height: 100%;
   height: 100%;
@@ -146,7 +146,7 @@ ul {
 }
 
 .portfoliobg {
-  background-color: rgb(110,84,120);
+  background-image: url('./wallpaper2.jpg');
   padding-bottom: 230px;  
   overflow: hidden;
   min-height: 100%;
@@ -155,7 +155,7 @@ ul {
 }
 
 .portfolioheader {
-  color: black;
+  color: white;
   text-align: center;
   margin: 0 auto;
   width: 20%;
